--- a/ansible/group_vars/pve.yml
+++ b/ansible/group_vars/pve.yml
@@ -11,9 +11,9 @@ package_list:
 telegraf_influxdb_urls:
   - http://soleria:8086
 
-remove_nag: True
-remove_enterprise_repo: True
-add_no_subscription_repo: True
+remove_nag: true
+remove_enterprise_repo: true
+add_no_subscription_repo: true
 
 # output
 telegraf_influxdb_v2: true
@@ -35,17 +35,17 @@ telegraf_plugins_base:
   - name: processes
   - name: hddtemp
   - name: sensors
-  - name: ping
-    options:
-      urls: ["1.1.1.1"]
-  - name: net_response
-    options:
-      protocol: "tcp"
-      address: "soleria:7878"
-  - name: net_response
-    options:
-      protocol: "tcp"
-      address: "soleria:8989"
+  # - name: ping
+  #   options:
+  #     urls: ["1.1.1.1"]
+  # - name: net_response
+  #   options:
+  #     protocol: "tcp"
+  #     address: "soleria:7878"
+  # - name: net_response
+  #   options:
+  #     protocol: "tcp"
+  #     address: "soleria:8989"
 
 nfs_exports:
   - "/storage/data *(rw,sync,no_root_squash)" 
