--- a/ansible/group.dmdc.yml
+++ b/ansible/group.dmdc.yml
@@ -7,3 +7,7 @@
       become: true
     - role: geerlingguy.docker
       become: true
+    - role: grog.package
+      become: yes
+    - role: dmdc
+      become: yes
