--- a/ansible/roles/plex/tasks/docker-plex.yml
+++ b/ansible/roles/plex/tasks/docker-plex.yml
@@ -14,6 +14,7 @@
     dest: /home/dtm/docker/compose-plex/.env
 
 - name: Create and start plex services
-  community.docker.docker_compose:
+  docker_compose:
     project_src: /home/dtm/docker/compose-plex
+    pull: yes
   register: output
