--- a/ansible/roles/soleria/tasks/docker-media.yml
+++ b/ansible/roles/soleria/tasks/docker-media.yml
@@ -14,6 +14,7 @@
     dest: /home/dtm/docker/compose-media/.env
 
 - name: Create and start media services 
-  community.docker.docker_compose:
+  docker_compose:
     project_src: /home/dtm/docker/compose-media
+    pull: yes
   register: output
