--- a/ansible/group.dmdc.yml
+++ b/ansible/group.dmdc.yml
@@ -3,11 +3,11 @@
 
 - hosts: dmdc
   roles:
-    - role: geerlingguy.security
-      become: true
-    - role: geerlingguy.docker
-      become: true
-    - role: grog.package
-      become: yes
+    # - role: geerlingguy.security
+    #   become: true
+    # - role: geerlingguy.docker
+    #   become: true
+    # - role: grog.package
+    #   become: yes
     - role: dmdc
       become: yes
