--- a/ansible/roles/dmdc/tasks/nginx.yml
+++ b/ansible/roles/dmdc/tasks/nginx.yml
@@ -1,3 +1,25 @@
+
+- name: add nginx apt-key
+  apt_key: 
+  become: yes
+    url: http://nginx.org/keys/nginx_signing.key 
+    state: present 
+
+- name: Add nginx stable repository from PPA and install its signing key on Ubuntu target
+  apt_repository:
+    repo: deb https://nginx.org/packages/ubuntu/ {{ ansible_distribution_release }} nginx
+  become: true  
+
+- name: Update the repository cache and update package "nginx" to latest version
+  apt:
+    name: nginx
+    state: latest
+
+- name: Install and upgrade python3-certbot-nginx
+  apt:
+    name: python3-certbot-nginx
+    state: latest
+
 - name: Copy dmdc nginx conf file
   template:
     # src: files/dmdc.conf
