--- a/ansible/group_vars/dmdc.yml
+++ b/ansible/group_vars/dmdc.yml
@@ -15,6 +15,8 @@ certbot_testmode: false
 
 certbot_certs:
   - domains:
+    - declanmorris.com
+    - www.declanmorris.com
     - declan-morris.com
     - www.declan-morris.com
 
