--- a/ansible/roles/dmdc/files/dmdc.https.conf
+++ b/ansible/roles/dmdc/files/dmdc.https.conf
@@ -1,6 +1,6 @@
 server {
 
-  server_name declan-morris.com www.declan-morris.com;
+  server_name declanmorris.com www.declanmorris.com declan-morris.com www.declan-morris.com;
 
   location / {
       proxy_pass http://localhost:8080/;
@@ -9,8 +9,8 @@ server {
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/declan-morris.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/declan-morris.com/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/declanmorris.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/declanmorris.com/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -28,9 +28,20 @@ server {
     } # managed by Certbot
 
 
+    if ($host = www.declanmorris.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = declanmorris.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+
   listen 80;
   listen [::]:80;
 
-  server_name declan-morris.com www.declan-morris.com;
+  server_name declan-morris.com www.declan-morris.com declanmorris.com www.declanmorris.com;
     return 404; # managed by Certbot
 }
