--- a/ansible/roles/dmdc/tasks/nginx.yml
+++ b/ansible/roles/dmdc/tasks/nginx.yml
@@ -1,9 +1,10 @@
+---
 
 - name: add nginx apt-key
   apt_key: 
-  become: yes
     url: http://nginx.org/keys/nginx_signing.key 
     state: present 
+  become: true
 
 - name: Add nginx stable repository from PPA and install its signing key on Ubuntu target
   apt_repository:
