configured traefik in media compose

--- a/ansible/group.soleria.yml
+++ b/ansible/group.soleria.yml
@@ -4,4 +4,4 @@
     - role: metrics
     # - role: traefik # heimdall is currently taking port 80
       become: yes
-    - role: dashboard
+    # - role: dashboard # todo this needs deleting if I move heimdall to media compose
