--- a/ansible/roles/soleria/files/docker/media/docker-compose.yml
+++ b/ansible/roles/soleria/files/docker/media/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     container_name: nordvpn
     image: bubuntux/nordlynx:latest
     restart: always
-    network_mode: bridge
+    networks:
+      - reverseProxy
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
@@ -43,6 +44,11 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.jackett.rule=Host(`jackett.soleria.net`)
+      - traefik.http.routers.jackett.tls.certresolver=le
+      - traefik.http.services.jackett.loadbalancer.server.port=9117
 
   transmission:
     image: linuxserver/transmission
@@ -69,6 +75,11 @@ services:
       timeout: 10s
       retries: 3
       start_period: 80s
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.transmission.rule=Host(`transmission.soleria.net`)
+      - traefik.http.routers.transmission.tls.certresolver=le
+      - traefik.http.services.transmission.loadbalancer.server.port=9091
 
   nzbhydra2:
     image: ghcr.io/linuxserver/nzbhydra2
@@ -84,6 +95,11 @@ services:
     depends_on:
       - nordvpn
     restart: unless-stopped
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.nzbhydra.rule=Host(`nzbhydra.soleria.net`)
+      - traefik.http.routers.nzbhydra.tls.certresolver=le
+      - traefik.http.services.nzbhydra.loadbalancer.server.port=5076
 
   sabnzbd:
     image: "linuxserver/sabnzbd"
@@ -101,6 +117,11 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.sabnzbd.rule=Host(`sabnzbd.soleria.net`)
+      - traefik.http.routers.sabnzbd.tls.certresolver=le
+      - traefik.http.services.sabnzbd.loadbalancer.server.port=8080
 
   sonarr:
     image: "linuxserver/sonarr"
@@ -118,10 +139,11 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
-    # labels: #TODO complete testing of reverse proxy
-    #   - traefik.enable=true
-    #   - traefik.http.routers.sonarr.rule=Host(`sonarr.soleria.net`)
-    #   - traefik.http.routers.sonarr.tls.certresolver=le
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.sonarr.rule=Host(`sonarr.soleria.net`)
+      - traefik.http.routers.sonarr.tls.certresolver=le
+      - traefik.http.services.sonarr.loadbalancer.server.port=8989
 
   radarr:
     image: "linuxserver/radarr"
@@ -139,6 +161,11 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.radarr.rule=Host(`radarr.soleria.net`)
+      - traefik.http.routers.radarr.tls.certresolver=le
+      - traefik.http.services.radarr.loadbalancer.server.port=7878
 
   radarrStandups:
     image: "linuxserver/radarr"
@@ -156,6 +183,11 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.radarrStandups.rule=Host(`radarrStandups.soleria.net`)
+      - traefik.http.routers.radarrStandups.tls.certresolver=le
+      - traefik.http.services.radarrStandups.loadbalancer.server.port=7877
 
   prowlarr:
     image: linuxserver/prowlarr:develop
@@ -170,11 +202,17 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.prowlarr.rule=Host(`prowlarr.soleria.net`)
+      - traefik.http.routers.prowlarr.tls.certresolver=le
+      - traefik.http.services.prowlarr.loadbalancer.server.port=9696
 
   traefik:
     container_name: traefik
     image: traefik:latest
-    # network_mode: host
+    networks:
+      - reverseProxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${DOCKERDIR}/traefik:/etc/traefik
@@ -189,6 +227,8 @@ services:
   whoami:
     container_name: whoami
     image: containous/whoami:latest
+    networks:
+      - reverseProxy
     restart: unless-stopped
     labels:
       - traefik.enable=true
@@ -196,6 +236,8 @@ services:
       - traefik.http.routers.whoami.tls.certresolver=le
       - traefik.http.routers.whoami.entrypoints=websecure
 
+networks:
+  reverseProxy: {}
   # lidarr:
   #   image: linuxserver/lidarr
   #   container_name: "lidarr"
