increase soleria resources, added changedetection and prune images

--- a/ansible/roles/aurora/tasks/docker.yml
+++ b/ansible/roles/aurora/tasks/docker.yml
@@ -70,3 +70,7 @@
     project_src: /home/dtm/docker
     pull: yes
   register: output
+
+- name: Prune docker images
+  docker_prune:
+    images: true
