--- a/ansible/roles/soleria/files/docker/media/docker-compose.yml
+++ b/ansible/roles/soleria/files/docker/media/docker-compose.yml
@@ -309,6 +309,18 @@ services:
       - traefik.http.routers.lidarr.entrypoints=websecure
       - traefik.http.services.lidarr.loadbalancer.server.port=7877
 
+  changedetection:
+    image: ghcr.io/dgtlmoon/changedetection.io
+    container_name: changedetection
+    hostname: changedetection
+    volumes:
+      - ${DOCKERDIR}/changedetection/datastore:/datastore
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+    ports:
+      - 5000:5000
+    restart: unless-stopped
   # plex-meta-manager:
   #   image: "meisnate12/plex-meta-manager"
   #   container_name: "plex-meta-manager"
