--- a/ansible/roles/soleria/files/docker/media/docker-compose.yml
+++ b/ansible/roles/soleria/files/docker/media/docker-compose.yml
@@ -350,6 +350,14 @@ services:
         - /storage/data/media/audiobooks:/audiobooks
         - ${DOCKERDIR}/audiobookshelf/config:/config
         - ${DOCKERDIR}/audiobookshelf/metadata
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.audiobookshelf.rule=Host(`audiobookshelf.soleria.net`)
+        - traefik.http.routers.audiobookshelf.tls.certresolver=le
+        - traefik.http.routers.audiobookshelf.entrypoints=websecure
+        - traefik.http.services.audiobookshelf.loadbalancer.server.port=80
+      networks:
+      - reverseProxy
 
   # plex-meta-manager:
   #   image: "meisnate12/plex-meta-manager"
