configured certbot to use ngnix as the webserver and re-direct www to apex

--- a/ansible/group_vars/dmdc.yml
+++ b/ansible/group_vars/dmdc.yml
@@ -8,9 +8,10 @@ certbot_auto_renew_minute: "03"
 certbot_auto_renew_hour: "5"
 certbot_create_if_missing: true
 
+certbot_auto_renew_options: --quiet --no-self-upgrade --nginx
+
 certbot_create_method: standalone
-certbot_create_standalone_stop_services:
-  - nginx
+certbot_create_standalone_stop_services: []
 certbot_testmode: false
 
 certbot_certs:
