--- a/ansible/roles/dmdc/files/dmdc.https.conf
+++ b/ansible/roles/dmdc/files/dmdc.https.conf
@@ -1,47 +1,43 @@
 server {
+  listen [::]:443 ssl; 
+  listen 443 ssl; 
 
-  server_name declanmorris.com www.declanmorris.com declan-morris.com www.declan-morris.com;
+  server_name declanmorris.com;
 
   location / {
-      proxy_pass http://localhost:8080/;
-      proxy_buffering off;
+    proxy_pass http://localhost:8080/;
+    proxy_buffering off;
   }
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/declanmorris.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/declanmorris.com/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
-
+  ssl_certificate /etc/letsencrypt/live/declanmorris.com/fullchain.pem; 
+  ssl_certificate_key /etc/letsencrypt/live/declanmorris.com/privkey.pem; 
+  include /etc/letsencrypt/options-ssl-nginx.conf; 
 }
 
 server {
-    if ($host = www.declan-morris.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
+  listen [::]:443 ssl; 
+  listen 443 ssl; 
 
+  server_name www.declanmorris.com www.declan-morris.com declan-morris.com;
 
-    if ($host = declan-morris.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
+  location / {
+    return 301 https://declanmorris.com$request_uri;
+  }
 
+  ssl_certificate /etc/letsencrypt/live/declanmorris.com/fullchain.pem; 
+  ssl_certificate_key /etc/letsencrypt/live/declanmorris.com/privkey.pem; 
+  include /etc/letsencrypt/options-ssl-nginx.conf; 
+}
 
-    if ($host = www.declanmorris.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    if ($host = declanmorris.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-
+server {
   listen 80;
   listen [::]:80;
 
+  include /etc/nginx/snippets/letsencrypt.conf;
+  
+  location / {
+    return 301 https://declanmorris.com$request_uri;
+  }
+
   server_name declan-morris.com www.declan-morris.com declanmorris.com www.declanmorris.com;
-    return 404; # managed by Certbot
 }
