--- a/ansible/group_vars/pve.yml
+++ b/ansible/group_vars/pve.yml
@@ -8,6 +8,8 @@ package_list:
   - name: python3-pip
   - name: tmux
   - name: fdisk
+  - name: mergerfs
+  - name: ncdu
 
 # telegraf
 telegraf_influxdb_urls:
@@ -40,6 +42,9 @@ telegraf_plugins_base:
 
 nfs_exports:
   - "/storage/data *(rw,sync,no_root_squash)"
+
+fstab_mergerfs:
+  - { source: "/mnt/disk*", mountpoint: "/storage", fs: fuse.mergerfs, opts: "defaults,nonempty,allow_other,use_ino,moveonenospc=true,category.create=mspmfs,dropcacheonclose=true,minfreespace=250G,fsname=jbod" }  
 
 snapraid_parity_disks:
   - { path: /mnt/parity1, diskbyid: /dev/disk/by-id/ata-WDC_WD180EDGZ-11B2DA0_3MGKEL6U-part1, fs: ext4, opts: defaults, content: false }
